[gd_scene load_steps=20 format=2]

[ext_resource path="res://Character  Textures/Robot/hero body.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Character  Textures/Robot/hero eyes.png" type="Texture" id=3]
[ext_resource path="res://Character  Textures/Robot/hero right leg.png" type="Texture" id=4]
[ext_resource path="res://Character  Textures/Robot/hero left hand.png" type="Texture" id=5]
[ext_resource path="res://Character  Textures/Hero/hero head.png" type="Texture" id=6]
[ext_resource path="res://Character  Textures/Robot/hero left leg.png" type="Texture" id=7]
[ext_resource path="res://Character  Textures/Robot/hero right hand.png" type="Texture" id=8]
[ext_resource path="res://Character  Textures/Hero/hero hand.png" type="Texture" id=9]
[ext_resource path="res://scripts/Weapon.gd" type="Script" id=10]
[ext_resource path="res://Character  Textures/Robot/hero head.png" type="Texture" id=11]
[ext_resource path="res://Character  Textures/Hero/hero leg.png" type="Texture" id=12]
[ext_resource path="res://Character  Textures/Hero/hero body.png" type="Texture" id=13]
[ext_resource path="res://Character  Textures/Hero/hero eye.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 80 )

[sub_resource type="Animation" id=2]
resource_name = "Walking"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("robot/left leg:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -152.016, 323.859 ), Vector2( 228.023, 257.766 ), Vector2( -152.016, 323.859 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("robot/left leg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 65.2647, -64.9219, 65.2647 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("robot/right leg:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 82.6172, 290.813 ), Vector2( -254.461, 304.031 ), Vector2( 82.6172, 290.813 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("robot/right leg:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -56.6283, 57.6652, -56.6283 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("robot/left hand:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 254.461, 19.8281 ), Vector2( -118.969, 19.8281 ), Vector2( 254.461, 19.8281 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("robot/left hand:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -71.3116, 82.4136, -71.3116 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("robot/head/eyes:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -52.8749 ), Vector2( 0, -52.8749 ), Vector2( 0, -52.8749 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("robot/head/eyes:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("robot/right hand:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -310.641, -29.7422 ), Vector2( 49.5703, -13.2188 ), Vector2( -310.641, -29.7422 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("robot/right hand:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 81.9805, -76.9804, 81.9805 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("robot/head:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 52.875, -370.125 ), Vector2( 52.875, -370.125 ), Vector2( 52.875, -370.125 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("robot/head:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("robot:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1.15433e-06, 2.30866e-06 ), Vector2( -1.15433e-06, 2.30866e-06 ), Vector2( -1.15433e-06, 2.30866e-06 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("robot:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("robot/right hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -128.881, 88.9584 ), Vector2( 4.65749, -215.212 ), Vector2( -36.1458, 77.8301 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("robot/right hand:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -0.402988, -139.902, -23.8853 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("robot/head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 52.875, -370.125 ), Vector2( 52.875, -370.125 ), Vector2( 52.875, -370.125 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("robot/head:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("robot/right leg:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -99.143, 350.163 ), Vector2( -99.143, 350.163 ), Vector2( -99.143, 350.163 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("robot/right leg:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 6.67105, 6.67105, 6.67105 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("robot/left leg:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 103.932, 338.696 ), Vector2( 103.932, 338.696 ), Vector2( 103.932, 338.696 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("robot/left leg:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -1.70881, -1.70881, -1.70881 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("robot:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1.15433e-06, 2.30866e-06 ), Vector2( -1.15433e-06, 2.30866e-06 ), Vector2( -1.15433e-06, 2.30866e-06 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("robot:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("robot/left hand:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 106.085, 97.7254 ), Vector2( 106.085, 97.7254 ), Vector2( 106.085, 97.7254 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("robot/left hand:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -1.54342, -1.54342, -1.54342 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("robot/head/eyes:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -52.8749 ), Vector2( 0, -52.8749 ), Vector2( 0, -52.8749 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("robot/head/eyes:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("robot/head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 52.875, -370.125 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("robot/head:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("robot/right leg:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -99.143, 350.163 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("robot/right leg:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6.67105 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("robot/left leg:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 103.932, 338.696 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("robot/left leg:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -1.70881 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("robot:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1.15433e-06, 2.30866e-06 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("robot:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("robot/left hand:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 106.085, 97.7254 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("robot/left hand:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -1.54342 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("robot/right hand:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -128.881, 88.9584 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("robot/right hand:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -0.402988 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("robot/head/eyes:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -52.8749 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("robot/head/eyes:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 36.6169, 16.5687 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="robot" type="Sprite" parent="."]
position = Vector2( -1.15433e-06, 2.30866e-06 )
scale = Vector2( 0.1513, 0.1513 )
texture = ExtResource( 1 )

[node name="head" type="Sprite" parent="robot"]
position = Vector2( 52.875, -370.125 )
texture = ExtResource( 11 )

[node name="eyes" type="Sprite" parent="robot/head"]
position = Vector2( 0, -52.8749 )
texture = ExtResource( 3 )

[node name="right leg" type="Sprite" parent="robot"]
position = Vector2( 82.6172, 290.813 )
rotation = -0.98835
texture = ExtResource( 4 )

[node name="left leg" type="Sprite" parent="robot"]
position = Vector2( -152.016, 323.859 )
rotation = 1.13908
z_index = -1
texture = ExtResource( 7 )

[node name="left hand" type="Sprite" parent="robot"]
position = Vector2( 254.461, 19.8281 )
rotation = -1.24462
z_index = -1
texture = ExtResource( 5 )

[node name="right hand" type="Sprite" parent="robot"]
position = Vector2( -310.641, -29.7422 )
rotation = 1.43083
texture = ExtResource( 8 )

[node name="hero" type="Sprite" parent="."]
visible = false
position = Vector2( -1.88988, 48.507 )
scale = Vector2( 0.135401, 0.135401 )
texture = ExtResource( 13 )

[node name="left hand" type="Sprite" parent="hero"]
position = Vector2( 125.619, 34.8941 )
z_index = -1
texture = ExtResource( 9 )

[node name="right hand" type="Sprite" parent="hero"]
position = Vector2( -58.1569, 55.8306 )
z_index = 1
texture = ExtResource( 9 )

[node name="left leg" type="Sprite" parent="hero"]
position = Vector2( 83.746, 179.123 )
z_index = -1
texture = ExtResource( 12 )

[node name="right leg" type="Sprite" parent="hero"]
position = Vector2( -58.1569, 176.797 )
z_index = 1
texture = ExtResource( 12 )

[node name="head" type="Sprite" parent="hero"]
position = Vector2( -4.65254, -214.018 )
texture = ExtResource( 6 )

[node name="eye" type="Sprite" parent="hero/head"]
position = Vector2( 65.1357, 11.6315 )
texture = ExtResource( 14 )

[node name="RobotAnimation" type="AnimationPlayer" parent="."]
anims/Walking = SubResource( 2 )
anims/attack = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="Weapon" type="Area2D" parent="."]
position = Vector2( 49.4736, 68.8537 )
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon"]
position = Vector2( 23.0173, -5.5559 )
shape = SubResource( 5 )

[node name="HeroAnimation" type="AnimationPlayer" parent="."]

[connection signal="body_entered" from="Weapon" to="Weapon" method="_on_Weapon_body_entered"]
[connection signal="body_exited" from="Weapon" to="Weapon" method="_on_Weapon_body_exited"]
